kubernetes/system/argocd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    cert-manager.io/issuer: letsencrypt-dns01-production-cluster-issuer-public
spec:
  ingressClassName: external-nginx
  tls: 
  - hosts:
    - argocd.k8s.sreboy.com
    secretName: argocd-k8s-sreboy-com-key-pair
  rules:
  - host: argocd.k8s.sreboy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
---
